# mlg-jvn-bot

./: .gitignore  README.md  client_helper.py  jvn_client.py  mlg_jvn_bot.py  pyproject.toml  requirements.txt  user_data_helper.py
clients/: gestion_client.py  gestion_client_helper.py  programas_client.py
commands/: command_help.py  command_list.py  command_subscribe.py  error_handler.py  subscription_handler.py  subscription_handler_starter.py
