[project]
name = "mlg-jvn-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "beautifulsoup4==4.12.2",
    "python-telegram-bot[job-queue]==20.1",
    "pytz==2022.7.1",
    "requests==2.28.2",
    "schedule==1.1.0",
]
